fix: use URL constructor instead of URI.toURL to avoid 'URI not absolute' error